Shorten text to fix line wrapping, and increase bottom padding

--- a/modules/search/css/search-widget-filters-admin-ui.css
+++ b/modules/search/css/search-widget-filters-admin-ui.css
@@ -58,7 +58,6 @@
 	position: relative;
 	font-family: dashicons;
 	font-size: 20px;
-	padding-right: 3px;
 	top: 5px;
 	line-height: 1px;
 	content:"\f223";
